unpackaged/main/default/objects/OpportunityLineItem/fields/Caracteristique_HS_OUI_NON__c.field-meta.xml
<CustomField>
    <fullName>Caracteristique_HS_OUI_NON__c</fullName>
    <label>Caractéristique HS (OUI/ NON)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>