unpackaged/main/default/objects/OpportunityLineItem/fields/Carnet_de_commande__c.field-meta.xml
<CustomField>
    <fullName>Carnet_de_commande__c</fullName>
    <label>Carnet de commande</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>