unpackaged/main/default/objects/OpportunityLineItem/fields/Charge_utile__c.field-meta.xml
<CustomField>
    <fullName>Charge_utile__c</fullName>
    <label>Charge utile</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>