unpackaged/main/default/objects/OpportunityLineItem/fields/Controle_Charge_utile__c.field-meta.xml
<CustomField>
    <fullName>Controle_Charge_utile__c</fullName>
    <label>Contrôle Charge utile</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>