unpackaged/main/default/objects/OpportunityLineItem/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>VEH-MD/LD = Nb en Mois

VEH-CD = Nb en jours

CTR = Nb en jours (toute durée confondue)</inlineHelpText>
    <label>Durée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>