unpackaged/main/default/objects/OpportunityLineItem/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Fin location</label>
    <type>Date</type>
</CustomField>