unpackaged/main/default/objects/OpportunityLineItem/fields/Energie__c.field-meta.xml
<CustomField>
    <fullName>Energie__c</fullName>
    <label>Energie</label>
    <length>250</length>
    <type>Text</type>
</CustomField>