unpackaged/main/default/objects/OpportunityLineItem/fields/Hors_standard__c.field-meta.xml
<CustomField>
    <fullName>Hors_standard__c</fullName>
    <label>Hors standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>