unpackaged/main/default/objects/OpportunityLineItem/fields/IDSAPCPQ__c.field-meta.xml
<CustomField>
    <fullName>IDSAPCPQ__c</fullName>
    <label>ID SAP CPQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>