unpackaged/main/default/objects/OpportunityLineItem/fields/IDSAPCPQParent__c.field-meta.xml
<CustomField>
    <fullName>IDSAPCPQParent__c</fullName>
    <label>ID SAP CPQ Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>