unpackaged/main/default/objects/OpportunityLineItem/fields/KMInclus__c.field-meta.xml
<CustomField>
    <fullName>KMInclus__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>KM inclus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>