unpackaged/main/default/objects/OpportunityLineItem/fields/LoyerClient__c.field-meta.xml
<CustomField>
    <fullName>LoyerClient__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Loyer client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>