unpackaged/main/default/objects/OpportunityLineItem/fields/LoyerEtOptions__c.field-meta.xml
<CustomField>
    <fullName>LoyerEtOptions__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Loyer + options</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>