unpackaged/main/default/objects/OpportunityLineItem/fields/LoyerInitial__c.field-meta.xml
<CustomField>
    <fullName>LoyerInitial__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Loyer initial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>