unpackaged/main/default/objects/OpportunityLineItem/fields/Marge_Montant_de_location__c.field-meta.xml
<CustomField>
    <fullName>Marge_Montant_de_location__c</fullName>
    <description>GFC-2913</description>
    <formula>TheoreticalMarginCustomerRent__c *  MontantTotalLocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marge * Montant de location</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>