unpackaged/main/default/objects/OpportunityLineItem/fields/Marge_theorique_loyer_client_globale__c.field-meta.xml
<CustomField>
    <fullName>Marge_theorique_loyer_client_globale__c</fullName>
    <description>Somme des produits par ligne de devis “marge théorique loyer client” * “montant total de la location” / Somme des “montant total de la location” de toutes les lignes de devis</description>
    <formula>(Quantity * TheoreticalMarginCustomerRent__c * MontantTotalLocation__c) /  Opportunity.Somme_des_montant_total_de_la_location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marge théorique loyer client globale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>