unpackaged/main/default/objects/OpportunityLineItem/fields/Marge_theorique_Loyer_PREF_HS__c.field-meta.xml
<CustomField>
    <fullName>Marge_theorique_Loyer_PREF_HS__c</fullName>
    <label>Marge théorique Loyer PREF HS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>