unpackaged/main/default/objects/OpportunityLineItem/fields/MaxAuthorizedDiscount__c.field-meta.xml
<CustomField>
    <fullName>MaxAuthorizedDiscount__c</fullName>
    <label>Remise max autorisée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>