unpackaged/main/default/objects/OpportunityLineItem/fields/Montant_total_achat__c.field-meta.xml
<CustomField>
    <fullName>Montant_total_achat__c</fullName>
    <description>Prix d’achat x quantité</description>
    <formula>PriceofPurchase__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant total d’achat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>