unpackaged/main/default/objects/OpportunityLineItem/fields/MontantLoyerFinal__c.field-meta.xml
<CustomField>
    <fullName>MontantLoyerFinal__c</fullName>
    <label>Montant loyer final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>