unpackaged/main/default/objects/OpportunityLineItem/fields/MontantTotalLocation__c.field-meta.xml
<CustomField>
    <fullName>MontantTotalLocation__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Montant total de la location</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>