unpackaged/main/default/objects/OpportunityLineItem/fields/N_Devis__c.field-meta.xml
<CustomField>
    <fullName>N_Devis__c</fullName>
    <label>N° Devis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>