unpackaged/main/default/objects/OpportunityLineItem/fields/N_Version__c.field-meta.xml
<CustomField>
    <fullName>N_Version__c</fullName>
    <label>N° Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>