unpackaged/main/default/objects/OpportunityLineItem/fields/OpportunityProductParent__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProductParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit d&#39;opportunité parent</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Produit d&#39;opportunité</relationshipLabel>
    <relationshipName>Produit_d_opportunite</relationshipName>
    <type>Lookup</type>
</CustomField>