unpackaged/main/default/objects/OpportunityLineItem/fields/Parc_s_renouvel_s__c.field-meta.xml
<CustomField>
    <fullName>Parc_s_renouvel_s__c</fullName>
    <label>Parc(s) renouvelé(s)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>