unpackaged/main/default/objects/OpportunityLineItem/fields/ParcNumber__c.field-meta.xml
<CustomField>
    <fullName>ParcNumber__c</fullName>
    <label>N° Parc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>