unpackaged/main/default/objects/OpportunityLineItem/fields/ParcNumberNew__c.field-meta.xml
<CustomField>
    <fullName>ParcNumberNew__c</fullName>
    <label>N° Parc (Neuf)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>