unpackaged/main/default/objects/OpportunityLineItem/fields/Pourcentage_16_2__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_16_2__c</fullName>
    <label>Pourcentage (16,2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>