unpackaged/main/default/objects/OpportunityLineItem/fields/PREF_Client__c.field-meta.xml
<CustomField>
    <fullName>PREF_Client__c</fullName>
    <label>PREF Client%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>