unpackaged/main/default/objects/OpportunityLineItem/fields/PREF_Market__c.field-meta.xml
<CustomField>
    <fullName>PREF_Market__c</fullName>
    <label>PREF Market%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>