unpackaged/main/default/objects/OpportunityLineItem/fields/PREF_Sup__c.field-meta.xml
<CustomField>
    <fullName>PREF_Sup__c</fullName>
    <label>PREF Sup%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>