unpackaged/main/default/objects/OpportunityLineItem/fields/PriceofPurchase__c.field-meta.xml
<CustomField>
    <fullName>PriceofPurchase__c</fullName>
    <label>Prix d&#39;achat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>