unpackaged/main/default/objects/OpportunityLineItem/fields/Prix100kmSuppClient__c.field-meta.xml
<CustomField>
    <fullName>Prix100kmSuppClient__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Prix 100km supp client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>