unpackaged/main/default/objects/OpportunityLineItem/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>Code Produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>