unpackaged/main/default/objects/OpportunityLineItem/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>Nom du produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>