unpackaged/main/default/objects/OpportunityLineItem/fields/ProductOpportunityTech__c.field-meta.xml
<CustomField>
    <fullName>ProductOpportunityTech__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;&amp;Id,PricebookEntry.Product2.Name,&#39;_self&#39;)</formula>
    <label>Prestation</label>
    <type>Text</type>
</CustomField>