unpackaged/main/default/objects/OpportunityLineItem/fields/RCInsurance__c.field-meta.xml
<CustomField>
    <fullName>RCInsurance__c</fullName>
    <label>Assurance RC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>