unpackaged/main/default/objects/OpportunityLineItem/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>Recommandations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>