unpackaged/main/default/objects/OpportunityLineItem/fields/Remise__c.field-meta.xml
<CustomField>
    <fullName>Remise__c</fullName>
    <description>Alimenté par SAP CPQ / Anciennement nommé sur SF &quot;Remise (%)&quot; - mappé avec &quot;Remise&quot; CPQ</description>
    <label>Remise client appliquée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>