unpackaged/main/default/objects/OpportunityLineItem/fields/Remise_globale__c.field-meta.xml
<CustomField>
    <fullName>Remise_globale__c</fullName>
    <description>Remise = Somme des produits par ligne de devis “remise” * “montant total de la location” / Somme des “montant total de la location” de toutes les lignes de devis</description>
    <formula>( Remise__c * MontantTotalLocation__c )/  Opportunity.Somme_des_montant_total_de_la_location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise globale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>