unpackaged/main/default/objects/OpportunityLineItem/fields/Remise_MontantTotalLocation__c.field-meta.xml
<CustomField>
    <fullName>Remise_MontantTotalLocation__c</fullName>
    <formula>Remise__c *  MontantTotalLocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise*MontantTotalLocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>