unpackaged/main/default/objects/OpportunityLineItem/fields/RentPREF__c.field-meta.xml
<CustomField>
    <fullName>RentPREF__c</fullName>
    <label>Loyer PREF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>