unpackaged/main/default/objects/OpportunityLineItem/fields/SalesType__c.field-meta.xml
<CustomField>
    <fullName>SalesType__c</fullName>
    <label>Nature du contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCT</fullName>
            </value>
            <value>
                <fullName>SUP</fullName>
            </value>
            <value>
                <fullName>RNV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>