unpackaged/main/default/objects/OpportunityLineItem/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte livré</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Produit d&#39;opportunité</relationshipLabel>
    <relationshipName>Produit_d_opportunite</relationshipName>
    <type>Lookup</type>
</CustomField>