unpackaged/main/default/objects/OpportunityLineItem/fields/SommePATproduit__c.field-meta.xml
<CustomField>
    <fullName>SommePATproduit__c</fullName>
    <label>Somme des PAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>