unpackaged/main/default/objects/OpportunityLineItem/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Début location</label>
    <type>Date</type>
</CustomField>