unpackaged/main/default/objects/OpportunityLineItem/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande d&#39;étude HS envoyée</fullName>
            </value>
            <value>
                <fullName>Demande d&#39;étude HS validée - Management Commercial</fullName>
            </value>
            <value>
                <fullName>Demande d&#39;étude HS refusée - Management Commercial</fullName>
            </value>
            <value>
                <fullName>Etude HS validée - à tarifer</fullName>
            </value>
            <value>
                <fullName>Demande d&#39;étude HS refusée - Service Produit</fullName>
            </value>
            <value>
                <fullName>Etude HS validée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>