unpackaged/main/default/objects/OpportunityLineItem/fields/Statut_Devis__c.field-meta.xml
<CustomField>
    <fullName>Statut_Devis__c</fullName>
    <label>Statut Devis</label>
    <length>40</length>
    <type>Text</type>
</CustomField>