unpackaged/main/default/objects/OpportunityLineItem/fields/Statut_Etude_HS__c.field-meta.xml
<CustomField>
    <fullName>Statut_Etude_HS__c</fullName>
    <label>Statut Etude HS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande d&#39;étude HS envoyée</fullName>
            </value>
            <value>
                <fullName>Demande d&#39;étude HS validée</fullName>
            </value>
            <value>
                <fullName>Demande d&#39;étude HS refusée</fullName>
            </value>
            <value>
                <fullName>Etude HS validée - à tarifer</fullName>
            </value>
            <value>
                <fullName>Etude HS refusée</fullName>
            </value>
            <value>
                <fullName>Etude HS validée et tarifée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>