unpackaged/main/default/objects/OpportunityLineItem/fields/T_O_I__c.field-meta.xml
<CustomField>
    <fullName>T_O_I__c</fullName>
    <label>T.O.I.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>