unpackaged/main/default/objects/OpportunityLineItem/fields/TheoreticalMarginCustomerRent__c.field-meta.xml
<CustomField>
    <fullName>TheoreticalMarginCustomerRent__c</fullName>
    <label>Marge théorique loyer client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>