unpackaged/main/default/objects/OpportunityLineItem/fields/TheoreticalMarginInitialRent__c.field-meta.xml
<CustomField>
    <fullName>TheoreticalMarginInitialRent__c</fullName>
    <label>Marge théorique loyer initial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>