unpackaged/main/default/objects/OpportunityLineItem/fields/TheoreticalMarginPREFRent__c.field-meta.xml
<CustomField>
    <fullName>TheoreticalMarginPREFRent__c</fullName>
    <label>Marge théorique loyer PREF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>